--- a/config/twitter.yml
+++ b/config/twitter.yml
@@ -1,3 +1,3 @@
 development:
-  consumer_key: "mFA2hBtckdJM5HxmaJI02Q"
-  consumer_secret: "4FnCNnsBT1qJIPW322bYMZOQ5INCqkhdN4kIq2kb0zQ"
+  consumer_key: "YjDE7Qs4TNq1vvL09oiLoQ"
+  consumer_secret: "RdiMz0eR0uFcmBn1jSZKr8Ce66VBlbsYe9FIbm5r7HU"
