--- a/config/twitter.yml
+++ b/config/twitter.yml
@@ -1,3 +1,3 @@
 development:
-  consumer_key: "YjDE7Qs4TNq1vvL09oiLoQ"
-  consumer_secret: "RdiMz0eR0uFcmBn1jSZKr8Ce66VBlbsYe9FIbm5r7HU"
+  consumer_key: "GJVfrB57hbeqTHtqtGgnA"
+  consumer_secret: "uSWGJYbm8qMIvRl0RuAHddXrYrosrU3xrSDopQQjR8"
